fix(ci): 修复 CI 工作流问题
1. 修复 Spotless 代码格式化问题
   - 应用 spotless:apply 格式化所有代码
   - 修复 DataSourceConfigLoader 和 DefaultMapper 中注释导致的导入不连续问题

2. 修复 CI 工作流配置
   - 在单元测试前添加 mvn install -DskipTests 编译步骤
   - 在代码质量检查中添加编译步骤以修复 spotbugs 依赖问题
   - 修复 dependency-check 的 NVD API 403 错误问题

3. 新增测试文件提升覆盖率
   - ExceptionTest.java: 异常类测试覆盖
   - PageTest.java: PageRequest/PageResult 测试覆盖
   - QueryConditionTest.java: 查询条件测试覆盖